tests/Driver/unknown-arg.sora
// RUN: %sorac -blargh %s | %filecheck %s
// CHECK: error: unknown argument '-blargh'